--- a/style.css
+++ b/style.css
@@ -28,3 +28,15 @@ body {
 .date-container {
   font-weight: 100;
 }
+.date-container .time {
+  font-size: 70px;
+}
+
+.date-container #am-pm {
+  font-size: 30px;
+  margin-left: 20px;
+}
+
+.date-container .date {
+  font-size: 30px;
+}
