--- a/style.css
+++ b/style.css
@@ -40,3 +40,17 @@ body {
 .date-container .date {
   font-size: 30px;
 }
+
+.place-container {
+  text-align: end;
+}
+
+.place-container .time-zone {
+  font-size: 30px;
+  font-weight: 100;
+}
+
+.place-container .country {
+  font-size: 12px;
+  font-weight: 700;
+}
