make info others

--- a/style.css
+++ b/style.css
@@ -54,3 +54,18 @@ body {
   font-size: 12px;
   font-weight: 700;
 }
+
+.current-info .others {
+  display: flex;
+  flex-direction: column;
+  background: rgba(24, 24, 27, 0.6);
+  padding: 20px;
+  border-radius: 10px;
+  margin: 10px 0;
+  border: 1px solid #eee;
+}
+
+.current-info .others .weather-item {
+  display: flex;
+  justify-content: space-between;
+}
